<resources>
    <string name="app_name">TelloPilot</string>

    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="takeoff">TAKEOFF</string>
    <string name="land">LAND</string>
    <string name="emergency">EMERGENCY</string>
    <string name="speed_normal">NORMAL</string>
    <string name="speed_fast">FAST</string>
    <string name="rec_start">REC</string>
    <string name="rec_stop">STOP</string>
    <string name="photo">PHOTO</string>

    <string name="status_disconnected">Disconnected</string>
    <string name="telemetry_placeholder">Bat: -- %  |  Alt: -- cm  |  Ground: -- cm</string>
</resources>
